fixed the sidebar menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 <body>
   <div id="app"></div>
 
+
+  <script>
+    setTimeout(() => {
+      $("#submit").click(function () {
+        $("#spinner").show();
+      });
+    }, 3000);
+
+  </script>
   <script src="src/assets/assets/jquery-3.2.1.min.js"></script>
   <script src="src/assets/assets/Uikit/js/uikit.js"></script>
   <script src="src/assets/assets/Uikit/js/uikit-icons.js"></script>
