final changes to account setting page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     }, 3000);
 
   </script>
+  <script>
+    $("#lorem").click(function () {
+      $("#ipsum").hide();
+    });
+
+    $("#show").click(function () {
+      $("p").show();
+    });
+
+  </script>
   <script src="src/assets/assets/jquery-3.2.1.min.js"></script>
   <script src="src/assets/assets/Uikit/js/uikit.js"></script>
   <script src="src/assets/assets/Uikit/js/uikit-icons.js"></script>
